--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   	<body id="home">
 
 		<nav class="navbar navbar-expand fixed-top navbar-light bg-light">
-			<a class="navbar-brand" href="#">Clint Simmons.dev()</a>
+			<a class="navbar-brand" href="#">Clint Simmons.dev( )</a>
 				<ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -57,7 +57,7 @@
 </div>
 
 <div class="alert alert-secondary" role="alert">
- <h4 class="alert-heading">Who is Clint, anyway?</h4>
+ <h4 class="alert-heading">Who's Clint'?</h4>
  <p>I am a Jr. Full-stack developer, and graduate of The Tech Academy in Portland, Oregon. 
     I'm fluent in several front-end languages, libraries and frameworks, including HTML & CSS, Bootstrap, Javascript, jQuery and React,
     as well as being fluent in Git and Github. I can build Relational Databases and stored procedures with SQL Server, and can build both front and back-end
@@ -67,7 +67,7 @@
     <h6>A Little History:</h6>
     <p>From video games, to virtual reality headsets, to automated crypto-trading bots, I've been a tech geek for about as long as I can remember. 
     I was born the year IBM released its first PC, and the protocol IPv4 was unveiled, which still routes most of our internet traffic.
-    I am fascinated by the explosion of incredible technologies the world has seen over the last few decades, and whether it's
+    I'm fascinated by the explosion of incredible technologies the world has seen over the last few decades, and whether it's
     artificial intelligence and machine-learning, augmented reality, or innovative web applications,
     I'm excited to be part of it all. So - what can I code for <em>you?</em></p>
 </div>
@@ -186,15 +186,17 @@
             
             <div class="col-sm">
                 <h3><a href="docs/images/airport_code_app.png">Airport Code App</a></h3>
-                <p>An application which lets you enter any major city on Earth, and returns the official IATA Airport Code for that city, 
-                   or takes your code and returns the city.</p>
+                <p>An application which lets you enter any major city on Earth, 
+                   and returns the official IATA Airport Code for that city, 
+                   or takes your airport code and returns the city.</p>
                 <img src="docs/images/airport_code_app.png" alt="">
                 <p>_________________________</p>
             </div>
             
             <div class="col-sm">
                 <h3><a href="docs/images/to-do-list-app.png">To-Do List App</a></h3>
-                <p>An application that lets you enter your 'to-do' items for today, this week, this month, or in your spare time, and allows
+                <p>An application that lets you enter your 'to-do' items for today, 
+                   this week, this month, or in your spare time, and allows
                    you to cross them of the list or delete as needed.
                 </p>
                 <img src="docs/images/to-do-list-app.jpg" alt="">
