--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
             
             <div class="col-sm">
                 <h3><a href="docs/images/airport_code_app.png">Airport Code App</a></h3>
-                <p>An application which lets you enter any major city on Earth, 
-                   and returns the official IATA Airport Code for that city, 
+                <p>An application which lets you enter any major city on Earth, <br>
+                   and returns the official IATA Airport Code for that city, <br>
                    or takes your airport code and returns the city.</p>
                 <img src="docs/images/airport_code_app.png" alt="">
                 <p>_________________________</p>
@@ -195,8 +195,8 @@
             
             <div class="col-sm">
                 <h3><a href="docs/images/to-do-list-app.png">To-Do List App</a></h3>
-                <p>An application that lets you enter your 'to-do' items for today, 
-                   this week, this month, or in your spare time, and allows
+                <p>An application that lets you enter your 'to-do' items for today, <br>
+                   this week, this month, or in your spare time, and allows<br>
                    you to cross them of the list or delete as needed.
                 </p>
                 <img src="docs/images/to-do-list-app.jpg" alt="">
