--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </div>
             
             <div class="col-sm">
-                <h3>Space Maze:</h3>
+                <h3><a href="docs/images/MAZE2.jpg">Space Maze:</a></h3>
                 <p>A delightfully surreal, text-based Choose Your Own Adventure game.<br> Featuring action, suspense, adventure, and even a Final Boss.</p>
                 <img src="docs/images/MAZE2.jpg" alt="">
                 <p>_________________________</p>
