--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                    this week, this month, or in your spare time, and allows<br>
                    you to cross them of the list or delete as needed.
                 </p>
-                <img src="docs/images/to-do-list-app.jpg" alt="">
+                <img src="docs/images/to-do-list-app.png" alt="">
                 <p>_________________________</p>
             </div>
         </div>
