--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </div>
 
  <div class="jumbotron jumbotron-2">
-  <h3 class="centered text-center">Come find me on<br><img src="docs/images/Github-icon_50x50.png" alt=""> <a href="https://github.com/Transfixed81">GitHub</a> and <a href="https://www.linkedin.com/in/clint-simmons-39b56a4/">LinkedIn<img src="docs/images/linkedin-icon-60x45.png" alt=""></a></h3>
+  <h3 class="centered text-center">Come find me on<br><img src="docs/images/Github-icon_50x50.png" alt=""> <a href="https://github.com/ClintSimmonsDev">GitHub</a> and <a href="https://www.linkedin.com/in/clint-simmons/">LinkedIn<img src="docs/images/linkedin-icon-60x45.png" alt=""></a></h3>
  </div>
 
 <div class="container-fluid text-center" id="services">
@@ -120,7 +120,7 @@
         <img class="card-img-top" src="docs/images/git_logo.png" alt="Git">
         <div class="card-body" style="background-color: rgb(223, 223, 223)">
             <h5 class="card-title">Git & GitHub</h5>
-            <p class="card-text">Version control is critical, especially in larger projects or when working with teams. Using the powers of Git and Github, we can keep your project on track and up to date with ease. Here's mine: <a href = "https://github.com/Transfixed81">Transfixed81</a></p>
+            <p class="card-text">Version control is critical, especially in larger projects or when working with teams. Using the powers of Git and Github, we can keep your project on track and up to date with ease. Here's mine: <a href = "https://github.com/ClintSimmonsDev">ClintSimmonsDev</a></p>
         </div>
     </div>
 </div>
