--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <div class="alert alert-secondary" role="alert">
  <h4 class="alert-heading">Who's Clint'?</h4>
- <p>I am a Jr. Full-stack developer, and graduate of The Tech Academy in Portland, Oregon. 
+ <p>I am a Full-stack developer, and graduate of The Tech Academy in Portland, Oregon. 
     I'm fluent in several front-end languages, libraries and frameworks, including HTML & CSS, Bootstrap, Javascript, jQuery and React,
     as well as being fluent in Git and Github. I can build Relational Databases and stored procedures with SQL Server, and can build both front and back-end
     applications with Python3, including Django for web applications. I'm adept at agile/scrum development and worked
