Update personal site

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 
 <div class="card-deck">
     <div class="card">
-        <div class="col-sm col-header">
-            <h2>A few recent web pages I've built: <br>_____________</h2>
+        <div class="col-sm col-header text-center">
+            <h2>A few recent web pages I'm working on: <br>_____________</h2>
         </div>
     </div>
         <div class="card">
@@ -182,7 +182,7 @@
         <div class="flex-container-2 text-center">
             <div class="row-2">
                 <div class="category">
-                    <h2>Some Applications I've <br>recently worked on: <br>_____________</h2>
+                    <h2>Applications I've <br>recently worked on: <br>_____________</h2>
                 </div>
 
                 <div class="col-sm">
@@ -246,7 +246,7 @@
         <!--END HOME -->
         <!-- FOOTER -->
         <footer class="text-center text-light">
-            clintsimmonsdev.github.io &nbsp;|&nbsp; &copy; 2019
+            clintsimmonsdev.github.io &nbsp;|&nbsp; &copy; 2020
         </footer>
         <!-- END FOOTER -->
 
