--- a/index.html
+++ b/index.html
@@ -142,8 +142,10 @@
 
 <div class="card-deck">
     <div class="card">
-        <div class="col-sm col-header text-center">
-            <h2>A few recent web pages I'm working on: <br>_____________</h2>
+        <div class="card-body" style="background-color: rgba(0, 0, 0, 0.5)">
+            <div class="col-sm col-header text-center">
+                <h2>A few recent web pages I'm working on: <br>_____________</h2>
+            </div>
         </div>
     </div>
         <div class="card">
@@ -174,7 +176,7 @@
                 <p class="card-text">The site for the world-renowned Keel Dog Cinema, which shows the greatest films you've probably never heard of.</p>
             </div>
         </div>
-</div>
+    </div>
 
 
         <br>
