--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="card">
             <img class="card-img-top" src="docs/images/pizza_wizard.png" alt="SQL">
             <div class="card-body" style="background-color: rgb(223, 223, 223)">
-                <h5 class="card-title">Pizza Wizard</h5>
+                <h5 class="card-title"><a href="docs/Pizza_Wizard/Pizza_Wizard_2.html">Pizza Wizard</a></h5>
                 <p class="card-text">The one and only place where your pizza is hand-levitated by a wizard, you can build your own pizza and see the price instantly.</p>
             </div>
         </div>
