--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
         <div class="card">
             <img class="card-img-top" src="docs/images/pizza_wizard.png" alt="SQL">
             <div class="card-body" style="background-color: rgb(223, 223, 223)">
-                <h5 class="card-title"><a href="docs/Pizza_Wizard/Pizza_Wizard_2.html">Pizza Wizard</a></h5>
+                <h5 class="card-title text-center"><a href="docs/Pizza_Wizard/Pizza_Wizard_2.html">Pizza Wizard</a></h5>
                 <p class="card-text">The one and only place where your pizza is hand-levitated by a wizard, you can build your own pizza and see the price instantly.</p>
             </div>
         </div>
         <div class="card">
             <img class="card-img-top" src="docs/images/Canadian.png" alt="SQL">
             <div class="card-body" style="background-color: rgb(223, 223, 223)">
-                <h5 class="card-title">Your New Canadian</h5>
+                <h5 class="card-title text-center"><a href="docs/images/Canadian.png">Your New Canadian</a></h5>
                 <p class="card-text">You've lived long enough without your very own Canadian. Act now and buy 2 Canadians for the price of 3, get a bonus Canadian free!</p>
             </div>
         </div>
