--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="card">
             <img class="card-img-top" src="docs/images/Canadian.png" alt="SQL">
             <div class="card-body" style="background-color: rgb(223, 223, 223)">
-                <h5 class="card-title text-center"><a href="docs/images/Canadian.png">Your New Canadian</a></h5>
+                <h5 class="card-title text-center"><a href="docs/images/CanadianFull.png">Your New Canadian</a></h5>
                 <p class="card-text">You've lived long enough without your very own Canadian. Act now and buy 2 Canadians for the price of 3, get a bonus Canadian free!</p>
             </div>
         </div>
