--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
         <div class="card">
             <img class="card-img-top" src="docs/images/sun_station.png" alt="SQL">
             <div class="card-body" style="background-color: rgb(223, 223, 223)">
-                <h5 class="card-title">The Sun Station</h5>
+                <h5 class="card-title text-center"><a href="docs/The_Sun_Station/The_Sun_Station.html">The Sun Station</a></h5>
                 <p class="card-text">A resort site where you can book your first and only trip directly <em>into the sun.</em> Your friends will be so jealous.</p>
             </div>
         </div>
         <div class="card">
             <img class="card-img-top" src="docs/images/Keeldog_cinema.png" alt="SQL">
             <div class="card-body" style="background-color: rgb(223, 223, 223)">
-                <h5 class="card-title">Keel Dog Cinema</h5>
+                <h5 class="card-title text-center"><a href="docs/Keeldog_Cinema/Keeldog_Cinema.html">Keel Dog Cinema</a></h5>
                 <p class="card-text">The site for the world-renowned Keel Dog Cinema, which shows the greatest films you've probably never heard of.</p>
             </div>
         </div>
