--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="card">
         <div class="card-body" style="background-color: rgba(0, 0, 0, 0.5)">
             <div class="col-sm col-header text-center">
-                <h2>A few recent web pages I'm working on: <br>_____________</h2>
+                <h3 class="card-text">A few recent web pages I'm working on: <br>_____________</h3>
             </div>
         </div>
     </div>
