--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="docs/images/CSharpMVC.png" alt="SQL">
+        <img class="card-img-top" src="docs/images/CSharpMVC.png" alt="C-Sharp">
         <div class="card-body" style="background-color: rgb(223, 223, 223)">
             <h5 class="card-title">C# & MVC</h5>
             <p class="card-text">I'm proficient in writing C# software for either Console or Web applications using ASP.NET MVC and Entity Framework. With the power of C# and MVC, we can create anything we imagine.</p>
@@ -146,28 +146,28 @@
 
 <div class="card-deck">
     <div class="card">
-        <img class="card-img-top" src="docs/images/pizza_wizard.png" alt="SQL">
+        <img class="card-img-top" src="docs/images/pizza_wizard.png" alt="Pizza_Wizard">
         <div class="card-body" style="background-color: rgb(223, 223, 223)">
             <h5 class="card-title text-center"><a href="docs/Pizza_Wizard/Pizza_Wizard_2.html">Pizza Wizard</a></h5>
             <p class="card-text">The one and only place where your pizza is hand-levitated by a wizard, you can build your own pizza and see the price instantly.</p>
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="docs/images/Canadian.png" alt="SQL">
+        <img class="card-img-top" src="docs/images/Canadian.png" alt="Canadian">
         <div class="card-body" style="background-color: rgb(223, 223, 223)">
             <h5 class="card-title text-center"><a href="docs/images/CanadianFull.png">Your New Canadian</a></h5>
             <p class="card-text">You've lived long enough without your very own Canadian. Act now and buy 2 Canadians for the price of 3, get a bonus Canadian free!</p>
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="docs/images/sun_station.png" alt="SQL">
+        <img class="card-img-top" src="docs/images/sun_station.png" alt="Sun_Station">
         <div class="card-body" style="background-color: rgb(223, 223, 223)">
             <h5 class="card-title text-center"><a href="docs/The_Sun_Station/The_Sun_Station.html">The Sun Station</a></h5>
             <p class="card-text">A resort site where you can book your first and only trip directly <em>into the sun.</em> Your friends will be so jealous.</p>
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="docs/images/Keeldog_cinema.png" alt="SQL">
+        <img class="card-img-top" src="docs/images/Keeldog_cinema.png" alt="KeelDog_Cinema">
         <div class="card-body" style="background-color: rgb(223, 223, 223)">
             <h5 class="card-title text-center"><a href="docs/KeelDog_Cinema/KeelDog_Cinema.html">Keel Dog Cinema</a></h5>
             <p class="card-text">The site for the world-renowned Keel Dog Cinema, which shows the greatest films you've probably never heard of.</p>
