--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="card">
         <img class="card-img-top" src="docs/images/CSharpMVC.png" alt="C-Sharp">
         <div class="card-body" style="background-color: rgb(223, 223, 223)">
-            <h5 class="card-title">C# & MVC</h5>
+            <h5 class="card-title">C# .NET & MVC</h5>
             <p class="card-text">I'm proficient in writing C# software for either Console or Web applications using ASP.NET MVC and Entity Framework. With the power of C# and MVC, we can create anything we imagine.</p>
         </div>
     </div>
