--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="card">
         <img class="card-img-top" src="docs/images/sql.png" alt="SQL">
         <div class="card-body" style="background-color: rgb(223, 223, 223)">
-            <h5 class="card-title">SQL</h5>
+            <h5 class="card-title">SQL Server</h5>
             <p class="card-text">I can build and maintain a complex database using MS SQL Server and can store, update and retrieve your data in any way you like. Check my GitHub to see a library network database I built.</p>
         </div>
     </div>
@@ -191,6 +191,13 @@
                         of each entry gets included, and users can submit comments<br> which appear at the bottom of the page.
                     </p>
                     <img src="docs/images/Travelogue_app.png" alt="">
+                    <p>_________________________</p>
+                </div>
+
+                <div class="col-sm">
+                    <h3><a href="https://https://github.com/ClintSimmonsDev/Theatre_Vertigo_Sample">Theatre Vertigo Application:</a></h3>
+                    <p>A large-scale web application with many functions and features for a local theater/production company.</p>
+                    <img src="docs/images/vertigo.png" alt="">
                     <p>_________________________</p>
                 </div>
 
