--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <div class="col-sm">
                     <h3><a href="https://https://github.com/ClintSimmonsDev/Theatre_Vertigo_Sample">Theatre Vertigo Application:</a></h3>
                     <p>A large-scale web application with many functions and features for a local theater/production company.</p>
-                    <img src="docs/images/vertigo.png" alt="">
+                    <img src="docs/images/vertigo_sml.png" alt="">
                     <p>_________________________</p>
                 </div>
 
