--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div class="card-deck">
     <div class="card">
         <img class="card-img-top" src="docs/images/CSharpMVC.png" alt="C-Sharp">
-        <div class="card-body" style="background-color: rgb(200, 200, 200)">
+        <div class="card-body" style="background-color: rgb(192, 192, 192)">
             <h5 class="card-title">C# .NET & MVC</h5>
             <p class="card-text">I'm proficient in writing C# software for either Console or Web applications using ASP.NET MVC and Entity Framework. With the power of C# and MVC, we can create anything we imagine.</p>
         </div>
@@ -103,7 +103,7 @@
     <div class="card">
         <img class="card-img-top" src="docs/images/js-logo.png" alt="Javascript">
         <div class="card-body" style="background-color: rgb(223, 223, 223)">
-            <h5 class="card-title">Javascript<br>jQuery & React</h5>
+            <h5 class="card-title">Javascript</h5>
             <p class="card-text">Javascript adds all kinds of interactivity and functionality to your site, allowing us to create a space with features only as limited as your imagination.</p>
         </div>
     </div>
