--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </div>
 
 <div class="alert alert-secondary" role="alert">
- <h4 class="alert-heading">Who's Clint?</h4>
+ <h4 class="alert-heading">Hey, I'm Clint</h4>
  <p>I am a Full-stack developer, and graduate of The Tech Academy in Portland, Oregon.
     I'm fluent in multiple programming languages, libraries and frameworks, including C# & ASP.NET development for either
     console or full MVC applications, Entity Framework, HTML & CSS, Bootstrap, Javascript, jQuery and React,
